--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.5.21"
   },
   "devDependencies": {
+    "@vitejs/plugin-legacy": "^7.2.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "vite": "^7.1.7"
   }
